# Aurum

./: .env.example  .gitignore  100_PERCENT_REAL.md  ARCHITECTURE.md  Anchor.toml  BRANDING.md  CLEANUP_COMPLETE.txt  CLEANUP_SUMMARY.md  COMMANDS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  FINAL_CHECKLIST.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GETTING_STARTED.md  HACKATHON_CHECKLIST.md  HOW_TO_MINT_AUUSD.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LICENSE  OPTIMIZATION_NOTES.md  PROGRAMS_READY.md  PROJECT_SUMMARY.md  README.md  REAL_IMPLEMENTATION_COMPLETE.md  SECURITY_AUDIT.md  SUBMISSION.md  VERCEL_DEPLOYMENT.md  YES_EVERYTHING_IS_REAL.md  deploy.ps1  deploy.sh  fix-lending-pool.sh  package-lock.json  package.json  quick-start.ps1  quick-start.sh  tsconfig.json
.claude/: settings.local.json
docs/: QUICKSTART.md
frontend/: .env.local.example  IMPLEMENTATION_SUMMARY.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
programs/compliance/: Cargo.toml
programs/compliance/src/: lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/yield_optimizer/: Cargo.toml
programs/yield_optimizer/src/: lib.rs
scripts/: check-tokens.js  create-collateral-faucet.ts  demo-flow.ts  export-private-key.js  get-real-prices.js  init-100-real.sh  init-programs.sh  init-real.js  init-vault-simple.js  initialize-all-programs.js  initialize-all.js  initialize-all.ts  initialize-lending-pool.ts  initialize-programs.ts  initialize-vault.js  mint-auusd.js  oracle-auto-updater.js  pyth-price-updater.ts  setup-pyth-oracle.js  setup-vault-complete.js  test-pyth-prices.js  update-oracle-once.js  update-oracle-prices.ts  update-oracle-real-prices.js  verify-100-real.sh  (+2 more)
(+48 files in other folders)
