[workspace]
members = [
    "programs/vault",
    "programs/compliance",
    "programs/oracle",
    "programs/yield_optimizer"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
