[package]
name = "compliance"
version = "0.1.0"
description = "Aurum compliance program for KYC/KYT/AML/Travel Rule"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
